@@ -63,11 +63,6 @@ public class DriverRemoteAcceptor implements RemoteAcceptor {
     private static final String TOKEN_RESET = "reset";
     private static final String TOKEN_SHOW = "show";
 
-    /**
-     * @deprecated As of 3.1.3, replaced by "none" option
-     */
-    @Deprecated
-    private static final String TOKEN_MAX = "max";
     private static final String TOKEN_NONE = "none";
     private static final String TOKEN_TIMEOUT = "timeout";
     private static final String TOKEN_ALIAS = "alias";
@@ -122,10 +117,8 @@ public class DriverRemoteAcceptor implements RemoteAcceptor {
             final String errorMessage = "The timeout option expects a positive integer representing milliseconds or 'none' as an argument";
             if (arguments.size() != 1) throw new RemoteException(errorMessage);
             try {
-                // first check for MAX timeout then NONE and finally parse the config to int. "max" is now "deprecated"
-                // in the sense that it will no longer be promoted. support for it will be removed at a later date
-                timeout = arguments.get(0).equals(TOKEN_MAX) ? Integer.MAX_VALUE :
-                        arguments.get(0).equals(TOKEN_NONE) ? NO_TIMEOUT : Integer.parseInt(arguments.get(0));
+                // first check for MAX timeout then NONE and finally parse the config to int.
+                timeout = arguments.get(0).equals(TOKEN_NONE) ? NO_TIMEOUT : Integer.parseInt(arguments.get(0));
                 if (timeout < NO_TIMEOUT) throw new RemoteException("The value for the timeout cannot be less than " + NO_TIMEOUT);
                 return timeout == NO_TIMEOUT ? "Remote timeout is disabled" : "Set remote timeout to " + timeout + "ms";
             } catch (Exception ignored) {
